--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,7 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 100%;
-    max-width: 800px;
+    width: fit-content;
 }
 
 .box {
@@ -61,7 +60,7 @@ body {
     padding: 15px;
     background: #fff;
     border-radius: 10px;
-    margin: 10px;
+    margin: 10px 0;
 }
 
 /* Top */
@@ -210,8 +209,10 @@ label {
 /* Luzes */
 #lights {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     column-gap: 5px;
+    width: fit-content;
+    margin: 0 auto;
 }
 
 #lights .number {
