--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 /* Reset */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 button {
     border: 0;
     padding: 0;
@@ -62,6 +68,7 @@ option {
     stroke: var(--black);
 }
 
+/* Geral */
 html {
     height: 100%;
 }
@@ -73,6 +80,13 @@ body {
     height: 100%;
 }
 
+.container {
+    margin: 0 auto;
+    max-width: 500px;
+    width: 100%;
+    padding: 0 15px;
+}
+
 /* Header */
 header {
     position: fixed;
@@ -81,9 +95,7 @@ header {
     left: 0;
     right: 0;
     z-index: 1;
-    padding: 0 15px;
     border-bottom: 1px solid rgba(0,0,0,0.15);
-    box-sizing: border-box;
 }
 
 header > .container {
@@ -126,7 +138,11 @@ header > .container {
     width: 100%;
     bottom: 0;
     transition: all .2s linear;
-    background: #fff;
+    background: inherit;
+}
+
+#menu .container {
+    padding: 0;
 }
 
 #menu.active {
@@ -135,7 +151,7 @@ header > .container {
 
 #menu h2 {
     font-size: 14px;
-    padding: 5px 15px;
+    padding: 15px;
     text-transform: uppercase;
 }
 
@@ -148,17 +164,16 @@ header > .container {
 
 #menu label {
     font-size: 16px;
-    padding-left: 5px;
 }
 
 #menu select {
     font-size: 16px;
+    font-style: italic;
 }
 
 main {
-    padding: 65px 15px 15px;
+    padding-top: 65px;
     height: 100%;
-    box-sizing: border-box;
 }
 
 main .container {
@@ -166,13 +181,6 @@ main .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 500px;
-    width: 100%;
 }
 
 .main-middle {
@@ -369,7 +377,6 @@ label {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
     margin: 0 7px;
 }
 
@@ -384,6 +391,7 @@ label {
     display: flex;
     column-gap: 10px;
     justify-content: space-between;
+    margin-bottom: 15px;
 }
 
 #volumes .column {
@@ -393,7 +401,6 @@ label {
     border-radius: 15px;
     padding: 10px 10px 0px;
     overflow: hidden;
-    box-sizing: border-box;
     width: 100%;
     background: rgba(0,0,0,0.025);
 }
